<resources>
    <string name="app_name">XgWmA</string>
    <string name="user_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="agent">代&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;理:</string>
    <string name="agent_level">代理等级:</string>
    <string name="become_agent">点击成为代理</string>
    <string name="immediately_authentication">点击立即认证</string>
    <string name="is_authentication">是否认证:</string>
    <string name="user_id">个人ID号:</string>
    <string name="account_settings">账号设置</string>
    <string name="total_sales">销售总额:</string>
    <string name="team_number">团队人数:</string>
    <string name="my_team">我的团队</string>
    <string name="my_achievement">我的业绩</string>
    <string name="apply_withdrawals">申请提现</string>
    <string name="apply_reward">申请奖励</string>
    <string name="report">举报</string>
    <string name="register">注册</string>
    <string name="my_account">我有账号,</string>
    <string name="login">登录</string>
    <string name="real_name">真实姓名</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="email">电子邮箱</string>
    <string name="phone">手机号码</string>
    <string name="id_card_number">身份证号</string>
    <string name="code">验&#160;&#160;证&#160;&#160;码</string>
    <string name="recommended_person">推&#160;&#160;荐&#160;&#160;人</string>
    <string name="recommended_person_phone">推荐人手机号</string>
    <string name="code_prompt">看不清?&#160;&#160;换一换</string>
    <string name="prompt">我已阅读并接受象谷微分销</string>
    <string name="service_provision">服务条款</string>
    <string name="and">和</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="register_immediately">立即注册</string>
    <string name="user_login">用户登录</string>
    <string name="name">用户名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="forget_password">忘记密码</string>
    <string name="empty_cache">清空缓存</string>
    <string name="invite_friends">邀请好友</string>
    <string name="feedback">意见反馈</string>
    <string name="message_setting">消息设置</string>
    <string name="check_updates">检查更新</string>
    <string name="join_us">加入我们</string>
    <string name="message_notification">消息通知</string>
    <string name="notice">提示</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="toast_message">消息提醒</string>
    <string name="loading">正在加载...</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_feedback">意见反馈</string>
    <string name="message_image_desc">Message Image</string>
</resources>
