<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.xgwma.app.views.CustomToolBar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        />
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp1"
         android:background="@color/lights_gray"
         />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp20"
          android:background="@color/light_white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_empty_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/empty_cache"
            android:textSize="@dimen/sp18"
            />

        <TextView
            android:id="@+id/tv_cath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/person_center_lv_left"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_check_updates"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/check_updates"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/invite_friends"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp20"
        android:background="@color/light_white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/feedback"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_message_notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/message_notification"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_join_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/join_us"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
    <RelativeLayout
        android:id="@+id/rl_message_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/message_setting"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lights_gray"
        />
</LinearLayout>