<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/logo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:background="@color/pale_gray"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/dp50"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login"
                    android:layout_marginLeft="@dimen/login_tv_left"
                    android:layout_marginTop="@dimen/login_tv_height"
                    android:textSize="@dimen/sp50"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp45"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp15"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/sp18"
                        android:layout_marginLeft="@dimen/login_tv_left"
                        />
                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp6"
                        android:layout_marginBottom="@dimen/dp6"
                        android:inputType="textPersonName"
                        android:layout_marginLeft="@dimen/dp6"
                        android:layout_marginRight="@dimen/dp50"
                        android:background="@drawable/person_center_middle_line"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp45"
                    android:layout_marginTop="@dimen/dp15"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/sp18"
                        android:layout_marginLeft="@dimen/login_tv_left"
                        />
                    <EditText
                        android:id="@+id/et_user_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp6"
                        android:layout_marginBottom="@dimen/dp6"
                        android:layout_marginLeft="@dimen/dp6"
                        android:layout_marginRight="@dimen/dp50"
                        android:inputType="textPassword"
                        android:background="@drawable/person_center_middle_line"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp30"
                    android:layout_height="@dimen/dp55">
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="@dimen/login_btn_width"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="@dimen/sp20"
                        android:background="@color/deep_blue"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginRight="@dimen/dp5"
                        />

                    <Button
                        android:id="@+id/btn_forget_password"
                        android:layout_width="@dimen/login_btn_width"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:layout_marginLeft="@dimen/dp5"
                        android:textSize="@dimen/sp20"
                        android:textColor="@color/white"
                        android:background="@color/light_gray"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>