<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_recommended_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:textSize="@dimen/sp18"
        android:textColor="@color/black"
        />

    <RelativeLayout
        android:id="@+id/rl_my_team"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/person_center_middle_line"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/my_team"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            />
        <TextView
            android:id="@+id/tv_tream_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/person_center_lv_left"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp5"
            android:background="@color/orange"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_my_achievement"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/person_center_middle_line"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/my_achievement"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            />
        <TextView
            android:id="@+id/tv_achievement_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/person_center_lv_left"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp5"
            android:background="@color/orange"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_apply_withdrawals"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/person_center_middle_line"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/apply_withdrawals"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_apply_reward"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/person_center_middle_line"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/apply_reward"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_report"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/person_center_middle_line"
        android:layout_height="@dimen/dp45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/person_center_lv_left"
            android:text="@string/report"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            />
    </RelativeLayout>
</LinearLayout>