<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/person_center_top_height">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/person_center_img_left"
            android:layout_marginRight="@dimen/person_center_img_right"
            android:layout_margin="@dimen/dp15"
            android:src="@mipmap/default_img"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="@dimen/dp2"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp2"
                >
                <TextView
                    android:id="@+id/tv_user_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_become_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/become_agent"
                    android:textStyle="bold"
                    android:padding="@dimen/dp2"
                    android:layout_marginLeft="@dimen/person_center_tv_left"
                    android:textColor="@color/white"
                    android:background="@color/orange"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_agent_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="@dimen/dp2"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp2"
                >
                <TextView
                    android:id="@+id/tv_is_authentication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/tv_immediately_authentication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/immediately_authentication"
                    android:layout_marginLeft="@dimen/person_center_tv_left"
                    android:padding="@dimen/dp2"
                    android:textColor="@color/white"
                    android:background="@color/orange"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="@dimen/dp2"
                />
            <TextView
                android:id="@+id/tv_account_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp2"
                android:text="@string/account_settings"
                android:textStyle="bold"
                android:padding="@dimen/dp3"
                android:textColor="@color/white"
                android:background="@color/blue"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="6">
        <TextView
            android:id="@+id/tv_total_sales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            />
        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tv_team_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>